[gd_scene load_steps=7 format=3 uid="uid://ccxy6tx8p0qr3"]

[ext_resource type="Script" path="res://Towers/tower.gd" id="1_a8xgr"]
[ext_resource type="Texture2D" uid="uid://brlpbpjsqwj4v" path="res://Assets/BeeHive.png" id="2_rrjq6"]
[ext_resource type="Script" path="res://Towers/range_display.gd" id="3_6cvw4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7c2t4"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5c8lx"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_m3gta"]
radius = 7.0

[node name="Tower" type="Node2D"]
script = ExtResource("1_a8xgr")

[node name="FlowerRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlowerRange"]
shape = SubResource("CircleShape2D_7c2t4")
debug_color = Color(0.603671, 0.541, 0.0749113, 0.42)

[node name="EnemyRange" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyRange"]
shape = SubResource("CircleShape2D_5c8lx")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_rrjq6")

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
color = Color(0.603922, 0.541176, 0.0745098, 0.419608)
script = ExtResource("3_6cvw4")

[node name="Outline" type="Line2D" parent="Polygon2D"]
closed = true
width = 1.0
default_color = Color(0.74, 0.674387, 0.1776, 0.823529)
round_precision = 1

[node name="MouseDetection" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseDetection"]
shape = SubResource("CircleShape2D_m3gta")

[node name="RangeDisplay" type="Polygon2D" parent="MouseDetection"]
visible = false
color = Color(0.603922, 0.541176, 0.0745098, 0.419608)
script = ExtResource("3_6cvw4")

[node name="Outline" type="Line2D" parent="MouseDetection/RangeDisplay"]
closed = true
width = 2.0
default_color = Color(0.74, 0.674387, 0.1776, 0.823529)
round_precision = 1

[connection signal="mouse_entered" from="MouseDetection" to="MouseDetection/RangeDisplay" method="_on_mouse_detection_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetection" to="MouseDetection/RangeDisplay" method="_on_mouse_detection_mouse_exited"]
